@@ -5,8 +5,10 @@ openssl (1.0.1e-3) unstable; urgency=low
     Patch by Colin Watson <cjwatson@ubuntu.com> (Closes: #689093)
   * Add Polish translation (Closes: #658162)
   * Add Turkish translation (Closes: #660971)
+  * Enable assembler for the arm targets, and remove armeb.
+    Patch by Riku Voipio <riku.voipio@iki.fi> (Closes: #676533)
 
- -- Kurt Roeckx <kurt@roeckx.be>  Mon, 20 May 2013 16:37:46 +0200
+ -- Kurt Roeckx <kurt@roeckx.be>  Mon, 20 May 2013 16:41:01 +0200
 
 openssl (1.0.1e-2) unstable; urgency=high
 
